@@ -5294,6 +5294,8 @@ Version 1.6.18beta09 [July 5, 2015]
 Version 1.6.18rc01 [July 9, 2015]
   Belatedly added Mans Rullgard and James Yu to the list of Contributing
     Authors.
+  Restored unused WEIGHTED_FILTER macros removed at libpng-1.6.18beta08
+    to png.h to avoid compatibility warnings.
 
 Send comments/corrections/commendations to png-mng-implement at lists.sf.net
 (subscription required; visit
